kubernetes/overlays/dev/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: sweetrpg-users-strip-prefix-v1

spec:
  stripPrefix:
    prefixes:
      - /api/users/0
      - /api/users/1
